--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "api crawler for BOLT certification service",
   "main": "bin/start.js",
   "bin": {
-    "bc2": "bin/start.js"
+    "boltca": "bin/start.js"
   },
   "scripts": {
-    "test": "bin/test.js"
+    "start": "bin/start.js",
+    "test": "bin/start.js -s"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
     "story",
     "music"
   ],
-  "author": "MerMer Ltd.",
+  "author": "Luphia Chang",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/BOLT-Protocol/Bolt-Certificate-Agent/issues"
@@ -29,6 +30,7 @@
     "dvalue": "^1.0.20",
     "ecrequest": "^1.1.3",
     "i18n": "^0.8.3",
+    "keccak": "^2.0.0",
     "koa": "^2.5.2",
     "koa-body": "^4.0.4",
     "koa-router": "^7.4.0",
