--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "level": "^4.0.0",
     "mongodb": "^3.1.3",
     "pem": "^1.12.5",
+    "request": "^2.88.0",
     "spdy": "^3.4.7",
     "toml": "^2.3.3"
   }
